--- a/less/navigation.less
+++ b/less/navigation.less
@@ -6,3 +6,15 @@
 //        .button();
 //     }
 // }
+
+.nav-container {
+    display: flex;
+    flex-flow: row-reverse;
+    justify-content: space-between;
+    margin: 10px;
+    a {
+        text-decoration: none;
+        color: @txt-color;
+        padding: 10px;
+    }
+}
